--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
   "dependencies": {
     "@heroicons/react": "^2.0.14",
     "axios": "^1.2.6",
+    "html-react-parser": "^3.0.8",
+    "line-clamp": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.8.0",
+    "slugify": "^1.6.5",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
